# nautilus-hide

./: .editorconfig  ChangeLog  NEWS  README  configure.ac  package.json
po/: POTFILES.in  it.po  nl.po
src/: Makefile.am  nautilus-hide.c
